html 모바일모드 추가, js reservateAPI api 호출 url 변경

--- a/src/main/resources/templates/escape/keyEscape.html
+++ b/src/main/resources/templates/escape/keyEscape.html
@@ -4,6 +4,7 @@
     <link rel="shortcut icon" href="#">
     <link rel="stylesheet" href="/css/escape/key-escape.css">
     <script defer src="/js/escape/keyEscape.js"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="UTF-8">
     <title>키이스케이프</title>
 </head>
