--- a/src/main/resources/templates/escape/keyEscape.html
+++ b/src/main/resources/templates/escape/keyEscape.html
@@ -1,30 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
+
     <link rel="shortcut icon" href="#">
     <link rel="stylesheet" href="/css/escape/key-escape.css">
+    <link rel="stylesheet" href="/css/index.css">
+    <script defer src="/js/index.js"></script>
     <script defer src="/js/escape/keyEscape.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="UTF-8">
     <title>키이스케이프</title>
 </head>
 <body>
-    <div>
-        <select id="area">
-            <option value="10">홍대</option>
-        </select>
-        <select id="theme-list">
-            <option value="41">삐릿-뽀</option>
-            <option value="43">홀리데이</option>
-            <option value="45">고백</option>
-        </select>
-        <input type="date" id="rev_date"><button id="button-date">입력</button>
+    <div class="spinner-container">
+        <div class="spinner-border" role="status">
+            <span class="visually-hidden">Loading...</span>
+        </div>
     </div>
-    <div>
-        <table id="theme-table">
-            <thead id="theme-head"></thead>
-            <tbody id="times-body"></tbody>
-        </table>
+    <div class="wrap">
+        <div>
+            <select id="area">
+                <option value="10">홍대</option>
+            </select>
+            <select id="theme-list">
+                <option value="41">삐릿-뽀</option>
+                <option value="43">홀리데이</option>
+                <option value="45">고백</option>
+            </select>
+            <input type="date" id="rev_date"><button id="button-date">입력</button>
+        </div>
+        <div>
+            <table id="theme-table">
+                <thead id="theme-head"></thead>
+                <tbody id="times-body"></tbody>
+            </table>
+        </div>
     </div>
 </body>
 </html>
